apps/hello/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: hello
  type: ClusterIP
  ports:
    - name: http
      port: 8000
