apps/hello/hello-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hello.ieeetamu.org`)
      kind: Rule
      services:
        - name: hello
          port: 8000
